Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6290

"use of function "QString::QString(const char *) .. is deprecated" warnings

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 4.6.1
    • 4.6.0
    • None
    • None
    • 14c01d35cd132bb1a5e5725877d28d5f75c086ab

    Description

      t4id: 260903

      There are many warnings when building QtCore and QtGui due to deprecation of char * initialisers.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0101981 Janne Anttila
            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes