Fixed "...QString::QString(const char *)... is deprecated" warning.

Task-number: QTBUG-6290
Reviewed-by: TrustMe